--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" name="description" content="Texte ici à voir" />
+    <!-- ajout du meta (voir pour le contenu du texte) -->
     <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -75,24 +76,25 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
+            <!-- ajout de alt -->
             <img
               src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Ryoji Iwata"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Nicholas Green"
             />
           </div>
           <div class="carousel-item">
             <img
               src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg"
               class="d-block w-100"
-              alt="..."
+              alt="Edward Cisneros"
             />
           </div>
         </div>
@@ -223,7 +225,7 @@
       <div class="container">
         <div class="service">
           <div class="service__description">
-            <h2>Shooting photo</h2>
+            <h3>Shooting photo</h3>
             <p>
               Pour capturer vos moments les plus précieux et garder un souvenir
               impérissable. Je me déplace en Île-de-France pour réaliser vos
@@ -284,11 +286,11 @@
           </p>
           <form action="" method="post">
             <!-- ajout de for dans label -->
-            <label for="firstname">Nom</label>
+            <label for="nom">Nom</label>
             <input type="text" name="nom" id="nom" />
             <label for="email">Email</label>
             <input type="email" name="email" id="email" />
-            <label for="textarea">Message</label>
+            <label for="message">Message</label>
             <textarea
               name="message"
               id="message"
