--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
           <div class="carousel-item active">
             <!-- ajout de alt -->
             <img
-              srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_small.webp"
+              srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_small.webp 480w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1920w" sizes="100vw"
               class="d-block w-100 img_iwata"
               alt="Ryoji Iwata"
             />
           </div>
           <div class="carousel-item">
             <img
-              srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_small.webp"
+              src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
               class="d-block w-100"
               alt="Nicholas Green"
             />
           </div>
           <div class="carousel-item">
             <img
-              srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_small.webp"
+              src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
               class="d-block w-100"
               alt="Edward Cisneros"
             />
