maj de la taille de l'image main

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="carousel-item active">
             <!-- ajout de alt -->
             <img
-              srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_small.webp 480w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1920w" sizes="100vw"
+              srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_small.webp 480w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1920w" sizes="100vw" height="180" width="480"
               class="d-block w-100 img_iwata"
               alt="Ryoji Iwata"
             />
