--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           </div>
           <div class="carousel-item">
             <img
+              loading="lazy"
               src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
               class="d-block w-100"
               alt="Nicholas Green"
@@ -89,6 +90,7 @@
           </div>
           <div class="carousel-item">
             <img
+              loading="lazy"
               src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
               class="d-block w-100"
               alt="Edward Cisneros"
