--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <!-- meta données -->
     <meta property="og:title" content="Nina Carducci">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="(mettre liens image ici)">
-    <meta name="twitter:card" content="(image à afficher)">
+    <meta property="og:image" content="./assets/images/nina.webp">
+    <meta property="og:description" content="Bienvenue sur mon site">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="Nina Carducci" />
     <script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
       
     <title>Nina Carducci</title>
@@ -74,12 +76,15 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <!-- ajout de alt -->
+
+            <!-- ajout de taille image width et height -->
             <img
               srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_small.webp 480w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1920w" sizes="100vw" height="180" width="480"
               class="d-block w-100 img_iwata"
               alt="Ryoji Iwata"
             />
           </div>
+          <!-- ajout de lazy pour les autres photos -->
           <div class="carousel-item">
             <img
               loading="lazy"
@@ -119,7 +124,7 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img class="nina_img" srcset="./assets/images/nina.webp, ./assets/images/nina_small.webp" alt="Photo de Nina" />
+        <img class="nina_img" srcset="./assets/images/nina.webp" alt="Photo de Nina" />
         <!-- ajout du alt sous la photo -->
       </div>
       <div class="about-me" id="about-me">
@@ -149,56 +154,56 @@
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            srcset="./assets/images/gallery/concerts/aaron-paul-wnx-fxzb6cw-unsplash.webp, ./assets/images/gallery/concerts/aaron-paul-wnx-fxzb6cw-unsplash_small.webp"
+            srcset="./assets/images/gallery/concerts/aaron-paul-wnx-fxzb6cw-unsplash.webp"
             alt="Aaron paul concert"
           />
           <!-- ajout du alt (voir pour referencement naturel) -->
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            srcset="./assets/images/gallery/entreprise/ali-morshedlou-wmd64tmfc4k-unsplash-65c9e108ca888.webp, ./assets/images/gallery/entreprise/ali-morshedlou-wmd64tmfc4k-unsplash-65c9e108ca888_small.webp/"
+            srcset="./assets/images/gallery/entreprise/ali-morshedlou-wmd64tmfc4k-unsplash-65c9e108ca888.webp"
             alt="Aaron paul concert"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            srcset="./assets/images/gallery/entreprise/jason-goodman-tho1-oukbg0-unsplash-65c9e108de9ba.webp, ./assets/images/gallery/entreprise/jason-goodman-tho1-oukbg0-unsplash-65c9e108de9ba_small.webp"
+            srcset="./assets/images/gallery/entreprise/jason-goodman-tho1-oukbg0-unsplash-65c9e108de9ba.webp"
             alt="Jason Goodman"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            srcset="./assets/images/gallery/mariage/hannah-busing-rvf2r-qmprk-unsplash-65c9e10305e44.webp, ./assets/images/gallery/mariage/hannah-busing-rvf2r-qmprk-unsplash-65c9e10305e44_small.webp"
+            srcset="./assets/images/gallery/mariage/hannah-busing-rvf2r-qmprk-unsplash-65c9e10305e44.webp"
             alt="Hannah Busing"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            srcset="./assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash-65c9e0f53d6f4.webp, ./assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash-65c9e0f53d6f4_small.webp"
+            srcset="./assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash-65c9e0f53d6f4.webp"
             alt="Ade Tunji"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            srcset="./assets/images/gallery/mariage/jakob-owens-siniljkxhmc-unsplash-65c9e103060a8.webp, ./assets/images/gallery/mariage/jakob-owens-siniljkxhmc-unsplash-65c9e103060a8_small.webp"
+            srcset="./assets/images/gallery/mariage/jakob-owens-siniljkxhmc-unsplash-65c9e103060a8.webp"
             alt="Jakob Owens"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            srcset="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1ur-8-unsplash-65c9e0f54af64.webp, ./assets/images/gallery/portraits/nino-van-prattenburg-443cl1ur-8-unsplash-65c9e0f54af64_small.webp"
+            srcset="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1ur-8-unsplash-65c9e0f54af64.webp"
             alt="Nino Van Prattenburg"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            srcset="./assets/images/gallery/concerts/austin-neill-hgO1wfpxl3i-unsplash.webp, ./assets/images/gallery/concerts/austin-neill-hgO1wfpxl3i-unsplash_small.webp"
+            srcset="./assets/images/gallery/concerts/austin-neill-hgO1wfpxl3i-unsplash.webp"
             alt="Austin Neill"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-fsgzm8n0hiy-unsplash-65c9e109d0521.webp, ./assets/images/gallery/entreprise/mateus-campos-felipe-fsgzm8n0hiy-unsplash-65c9e109d0521_small.webp"
+            srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-fsgzm8n0hiy-unsplash-65c9e109d0521.webp"
             alt="Mateus campos felipe"
           />
         </div>
@@ -300,7 +305,7 @@
           </form>
         </div>
         <div class="picture right">
-          <img class="img_camera" srcset="./assets/images/camera.webp, ./assets/images/camera_small.webp" alt="camera" />
+          <img class="img_camera" srcset="./assets/images/camera.webp" alt="camera" />
           <!-- ajout du alt -->
         </div>
       </div>
