--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" name="description" content="Texte ici à voir" />
-    <!-- meta données -->
-    <meta property="og:title" content="Nina Carducci">
+    <!-- Open graph -->
     <meta property="og:type" content="website">
-    <meta property="og:image" content="./assets/images/nina.webp">
-    <meta property="og:description" content="Bienvenue sur mon site">
+    <meta property="og:title" content="Nina Carducci">
+    <meta property="og:url" content="https://wolverinefr.github.io/Projet_9_Nina_Carducci/">
+    <meta property="og:image" content="https://wolverinefr.github.io/Projet_9_Nina_Carducci/assets/images/nina.webp">
+    <meta property="og:description" content="Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n&rsquo;avons qu&rsquo;une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes.">
+    
+    <!-- twitter card -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="Nina Carducci" />
+    <meta name="twitter:site" content="@NinaCarducci">
+    <meta name="twitter:title" content="Nina Carducci">
+    <meta name="twitter:description" content="Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n&rsquo;avons qu&rsquo;une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes.">
+    <meta name="twitter:image" content="https://wolverinefr.github.io/Projet_9_Nina_Carducci/assets/images/nina.webp">
+
     <script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
       
     <title>Nina Carducci</title>
