Modification description des meta données

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" name="description" content="Texte ici à voir" />
+    <meta charset="UTF-8" name="description" content="Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n&rsquo;avons qu&rsquo;une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes." />
     <!-- Open graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Nina Carducci">
