--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
     <link rel="stylesheet" href="./assets/build/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/style.min.css" />
 
-    <!-- ajout de preconnect pour fonts gstatic -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+    <!-- données -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" name="description" content="Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n&rsquo;avons qu&rsquo;une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes." />
+    <meta charset="UTF-8" name="description" content="Découvrez l'univers captivant de la photographie à travers l'objectif talentueux de Nina Carducci. Explorez ses créations uniques et laissez-vous emporter par la beauté saisissante de ses images." />
     <!-- Open graph -->
+    <meta property="og:local" content="fr_FR">
+    <meta property="og:language" content="fr">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Nina Carducci">
     <meta property="og:url" content="https://wolverinefr.github.io/Projet_9_Nina_Carducci/">
+    <meta property="og:site_name" content="wolverinefr.github.io/Projet_9_Nina_Carducci/" />
     <meta property="og:image" content="https://wolverinefr.github.io/Projet_9_Nina_Carducci/assets/images/nina.webp">
-    <meta property="og:description" content="Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n&rsquo;avons qu&rsquo;une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes.">
+    <meta property="og:description" content="Découvrez l'univers captivant de la photographie à travers l'objectif talentueux de Nina Carducci. Explorez ses créations uniques et laissez-vous emporter par la beauté saisissante de ses images.">
     
     <!-- twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@NinaCarducci">
     <meta name="twitter:title" content="Nina Carducci">
-    <meta name="twitter:description" content="Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n&rsquo;avons qu&rsquo;une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes.">
+    <meta name="twitter:description" content="Découvrez l'univers captivant de la photographie à travers l'objectif talentueux de Nina Carducci. Explorez ses créations uniques et laissez-vous emporter par la beauté saisissante de ses images.">
     <meta name="twitter:image" content="https://wolverinefr.github.io/Projet_9_Nina_Carducci/assets/images/nina.webp">
 
     <script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
