modification erreur W3C du code HTML

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- données -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" name="description" content="Découvrez l'univers captivant de la photographie à travers l'objectif talentueux de Nina Carducci. Explorez ses créations uniques et laissez-vous emporter par la beauté saisissante de ses images." />
+    <meta name="description" content="Découvrez l'univers captivant de la photographie à travers l'objectif talentueux de Nina Carducci. Explorez ses créations uniques et laissez-vous emporter par la beauté saisissante de ses images." />
     <!-- Open graph -->
     <meta property="og:local" content="fr_FR">
     <meta property="og:language" content="fr">
@@ -87,6 +87,7 @@
 
             <!-- ajout de taille image width et height -->
             <img
+              src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
               srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_small.webp 480w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1920w" sizes="100vw" height="180" width="480"
               class="d-block w-100 img_iwata"
               alt="Ryoji Iwata"
@@ -132,7 +133,7 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img class="nina_img" srcset="./assets/images/nina.webp" alt="Photo de Nina" />
+        <img class="nina_img" src="./assets/images/nina.webp" alt="Photo de Nina" />
         <!-- ajout du alt sous la photo -->
       </div>
       <div class="about-me" id="about-me">
@@ -162,56 +163,56 @@
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            srcset="./assets/images/gallery/concerts/aaron-paul-wnx-fxzb6cw-unsplash.webp"
+            src="./assets/images/gallery/concerts/aaron-paul-wnx-fxzb6cw-unsplash.webp"
             alt="Aaron paul concert"
           />
           <!-- ajout du alt (voir pour referencement naturel) -->
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            srcset="./assets/images/gallery/entreprise/ali-morshedlou-wmd64tmfc4k-unsplash-65c9e108ca888.webp"
+            src="./assets/images/gallery/entreprise/ali-morshedlou-wmd64tmfc4k-unsplash-65c9e108ca888.webp"
             alt="Aaron paul concert"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            srcset="./assets/images/gallery/entreprise/jason-goodman-tho1-oukbg0-unsplash-65c9e108de9ba.webp"
+            src="./assets/images/gallery/entreprise/jason-goodman-tho1-oukbg0-unsplash-65c9e108de9ba.webp"
             alt="Jason Goodman"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            srcset="./assets/images/gallery/mariage/hannah-busing-rvf2r-qmprk-unsplash-65c9e10305e44.webp"
+            src="./assets/images/gallery/mariage/hannah-busing-rvf2r-qmprk-unsplash-65c9e10305e44.webp"
             alt="Hannah Busing"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            srcset="./assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash-65c9e0f53d6f4.webp"
+            src="./assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash-65c9e0f53d6f4.webp"
             alt="Ade Tunji"
           />
           <img
             data-gallery-tag="Mariages"
             class="gallery-item"
-            srcset="./assets/images/gallery/mariage/jakob-owens-siniljkxhmc-unsplash-65c9e103060a8.webp"
+            src="./assets/images/gallery/mariage/jakob-owens-siniljkxhmc-unsplash-65c9e103060a8.webp"
             alt="Jakob Owens"
           />
           <img
             data-gallery-tag="Portrait"
             class="gallery-item"
-            srcset="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1ur-8-unsplash-65c9e0f54af64.webp"
+            src="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1ur-8-unsplash-65c9e0f54af64.webp"
             alt="Nino Van Prattenburg"
           />
           <img
             data-gallery-tag="Concert"
             class="gallery-item"
-            srcset="./assets/images/gallery/concerts/austin-neill-hgO1wfpxl3i-unsplash.webp"
+            src="./assets/images/gallery/concerts/austin-neill-hgO1wfpxl3i-unsplash.webp"
             alt="Austin Neill"
           />
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
-            srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-fsgzm8n0hiy-unsplash-65c9e109d0521.webp"
+            src="./assets/images/gallery/entreprise/mateus-campos-felipe-fsgzm8n0hiy-unsplash-65c9e109d0521.webp"
             alt="Mateus campos felipe"
           />
         </div>
@@ -296,7 +297,7 @@
           <p>
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
-          <form action="" method="post">
+          <form action="#" method="post">
             <!-- ajout de for dans label -->
             <label for="nom">Nom</label>
             <input type="text" name="nom" id="nom" />
@@ -313,7 +314,7 @@
           </form>
         </div>
         <div class="picture right">
-          <img class="img_camera" srcset="./assets/images/camera.webp" alt="camera" />
+          <img class="img_camera" src="./assets/images/camera.webp" alt="camera" />
           <!-- ajout du alt -->
         </div>
       </div>
