modification du alt identique à une autre img

--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
             src="./assets/images/gallery/concerts/aaron-paul-wnx-fxzb6cw-unsplash.webp"
             alt="Aaron paul concert"
           />
-          <!-- ajout du alt (voir pour referencement naturel) -->
+          <!-- ajout du alt -->
           <img
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/ali-morshedlou-wmd64tmfc4k-unsplash-65c9e108ca888.webp"
-            alt="Aaron paul concert"
+            alt="Ali Morshedlou"
           />
           <img
             data-gallery-tag="Entreprises"
